# icp

./: .gitmodules  Cargo.toml  README.md  dfx.json
did/: icp.did
script/: init-local.sh  install.sh
src/: dip20.rs  lib.rs  prelude.rs  types.rs
src/guard/: mod.rs
src/icp_backend/: Cargo.toml
src/lifecycle/: init.rs  post_upgrade.rs  pre_upgrade.rs
src/query/: mod.rs  whoami.rs
src/update/: deposit.rs  withdraw.rs
tests/: icp.rs  icp.wasm
