[package]
name = "icp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.15.0"
ic-cdk-timers = "0.9.0"    # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.12.0"
serde = "1.0.207"

[dev-dependencies]
pocket-ic = "4.0.0"
